--- a/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
+++ b/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Entities\User\ULoginData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -49,6 +50,9 @@
       <Project>{c201ceae-3330-4ab2-ae51-44f52f09d562}</Project>
       <Name>eUseControl.BeekeepingStore.Helpers</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Enums\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
