--- a/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
+++ b/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\User\ULoginData.cs" />
+    <Compile Include="Entities\User\UProfileData.cs" />
     <Compile Include="Entities\User\UserLogin.cs" />
+    <Compile Include="Entities\User\UUserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
