--- a/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
+++ b/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
@@ -44,9 +44,14 @@
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Core\AdminApi.cs" />
     <Compile Include="Core\UserApi.cs" />
+    <Compile Include="DataContext.cs" />
+    <Compile Include="ErrorLog.cs" />
     <Compile Include="Interfaces\ISession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="SessionBL.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="UserActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\eUseControl.BeekeepingStore.Domain\eUseControl.BeekeepingStore.Domain.csproj">
