--- a/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
+++ b/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Core\AdminApi.cs" />
     <Compile Include="Core\UserApi.cs" />
     <Compile Include="DataContext.cs" />
+    <Compile Include="DBModel\DbContext.cs" />
+    <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="Interfaces\ISession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,6 +75,13 @@
       <Name>eUseControl.BeekeepingStore.Helpers</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DBModel\Seed\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -82,7 +91,7 @@
     <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.targets'))" />
   </Target>
   <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" />
-<Target Name="EnsureOutputPathExists" BeforeTargets="BeforeBuild">
+  <Target Name="EnsureOutputPathExists" BeforeTargets="BeforeBuild">
     <MakeDir Directories="$(OutputPath)" />
   </Target>
 </Project>
