--- a/eUseControl.BeekeepingStore/Web.config
+++ b/eUseControl.BeekeepingStore/Web.config
@@ -10,7 +10,14 @@
   </configSections>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add name="BeekeepingStoreDB" connectionString="Data Source =;          Initial Catalog =BeekeepingStoreDB;    Integrated Security= True;    MultipleActiveResultsSets = True;    App=EntityFramework" providerName="System.Data.SqlClient    " />
+    <add name="eUseControl.BeekeepingStore" 
+		 connectionString="Data Source=REDSHKI\SQLEXPRESS;          
+		 Initial Catalog=eUseControl.BeekeepingStore;    
+		 Integrated Security=True;    
+		 MultipleActiveResultsSets=True;    
+		 App=EntityFramework" 
+  providerName="System.Data.SqlClient" 
+  />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
