--- a/eUseControl.BeekeepingStore/eUseControl.BeekeepingStore.csproj
+++ b/eUseControl.BeekeepingStore/eUseControl.BeekeepingStore.csproj
@@ -191,7 +191,7 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Home\Cart.cshtml" />
-    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
