Web config si app config

--- a/eUseControl.BeekeepingStore/Web.config
+++ b/eUseControl.BeekeepingStore/Web.config
@@ -14,8 +14,8 @@
 		 connectionString="Data Source=REDSHKI\SQLEXPRESS;          
 		 Initial Catalog=eUseControl.BeekeepingStore;    
 		 Integrated Security=True;    
-		 MultipleActiveResultsSets=True;    
-		 App=EntityFramework" 
+		 MultipleActiveResultSets=True;    
+		 Application Name=EntityFramework" 
   providerName="System.Data.SqlClient" 
   />
   </connectionStrings>
