Adaugare baza de date pentru produse

--- a/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
+++ b/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Product\Product.cs" />
     <Compile Include="Entities\User\UDBTable.cs" />
     <Compile Include="Entities\User\ULoginData.cs" />
     <Compile Include="Entities\User\UProfileData.cs" />
