Am creat sistemul de payment, am creat si o simulare atunci cand introduci datele de achitare, va aparea mesajul ca sa achitat cu success si se stocheaza informatia in baza de date, exista optiunea de cancel a comenzii si primesti un refund

--- a/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
+++ b/eUseControl.BeekeepingStore.Domain/eUseControl.BeekeepingStore.Domain.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Entities\Order\Order.cs" />
     <Compile Include="Entities\Order\OrderDTO.cs" />
     <Compile Include="Entities\Order\OrderItem.cs" />
+    <Compile Include="Entities\Payment\Payment.cs" />
+    <Compile Include="Entities\Payment\PaymentDTO.cs" />
     <Compile Include="Entities\Product\Product.cs" />
     <Compile Include="Entities\User\UDBTable.cs" />
     <Compile Include="Entities\User\ULoginData.cs" />
