--- a/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
+++ b/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
@@ -59,11 +59,13 @@
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="Interfaces\IOrder.cs" />
+    <Compile Include="Interfaces\IPayment.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Interfaces\ISession.cs" />
     <Compile Include="Migrations\AddOrderTable.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="OrderBL.cs" />
+    <Compile Include="PaymentBL.cs" />
     <Compile Include="ProductBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
