--- a/eUseControl.BeekeepingStore/Web.config
+++ b/eUseControl.BeekeepingStore/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <remove name="LocalSqlServer" />
     <add name="eUseControl.BeekeepingStore" 
-		 connectionString="Data Source=REDSHKI\SQLEXPRESS;          
+		 connectionString="Data Source=VAIRLINES\SQLEXPRESS;          
 		 Initial Catalog=eUseControl.BeekeepingStore;    
 		 Integrated Security=True;    
 		 MultipleActiveResultSets=True;    
