--- a/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
+++ b/eUseControl.BeekeepingStore.BusinessLogic/eUseControl.BeekeepingStore.BusinessLogic.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Interfaces\IPayment.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Interfaces\IWishlist.cs" />
     <Compile Include="Migrations\AddOrderTable.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="OrderBL.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="SessionBL.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserActivity.cs" />
+    <Compile Include="WishlistBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\eUseControl.BeekeepingStore.Domain\eUseControl.BeekeepingStore.Domain.csproj">
