--- a/eUseControl.BeekeepingStore.Domain/packages.config
+++ b/eUseControl.BeekeepingStore.Domain/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.BinFix" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="4.2.0" targetFramework="net472" developmentDependency="true" />
 </packages>
