--- a/eUseControl.BeekeepingStore/Web.config
+++ b/eUseControl.BeekeepingStore/Web.config
@@ -11,13 +11,12 @@
   <connectionStrings>
     <remove name="LocalSqlServer" />
     <add name="eUseControl.BeekeepingStore" 
-		 connectionString="Data Source=VAIRLINES\SQLEXPRESS;          
-		 Initial Catalog=eUseControl.BeekeepingStore;    
-		 Integrated Security=True;    
-		 MultipleActiveResultSets=True;    
+		 connectionString="Data Source=REDSHKI\SQLEXPRESS;
+		 Initial Catalog=eUseControl.BeekeepingStore;
+		 Integrated Security=True;
+		 MultipleActiveResultSets=True;
 		 Application Name=EntityFramework" 
-  providerName="System.Data.SqlClient" 
-  />
+		 providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
